--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,4 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+.pageHeader {
+  text-align: center;
+  margin: 2rem auto;
 }
