--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,14 +4,25 @@
   margin: 0;
 }
 
-html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  padding: 1rem;
+  padding: 4rem 24vw;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  body {
+    padding: 1rem 4rem;
+  }
+}
+
+@media (max-width: 425px) {
+  body {
+    padding: 1rem 1rem;
+  }
 }
